kubernetes/1-sentinel-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel
spec:
  serviceName: sentinel
  replicas: 3
  selector:
    matchLabels:
      app: sentinel
  template:
    metadata:
      labels:
        app: sentinel
    spec:
      containers:
        - name: sentinel
          image: nickadam/redis-ha:1
          command:
            - 'tini'
            - 'docker-entrypoint.sh'
            - 'redis-sentinel'
          ports:
            - containerPort: 26379
              name: sentinel
