kubernetes/0-redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  clusterIP: None
  ports:
  - name: redis
    port: 6379
