kubernetes/0-sentinel-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel
spec:
  selector:
    app: sentinel
  clusterIP: None
  ports:
  - name: sentinel
    port: 26379
